black moneyness, put, delta

--- a/cpp/cpp.vcxproj
+++ b/cpp/cpp.vcxproj
@@ -131,6 +131,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="fms_black.h" />
     <ClInclude Include="fms_distribution_normal.h" />
   </ItemGroup>
   <ItemGroup>
