--- a/cpp/cpp.vcxproj.filters
+++ b/cpp/cpp.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="fms_distribution_normal.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="fms_black.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="test.cpp">
