--- a/cpp/cpp.vcxproj
+++ b/cpp/cpp.vcxproj
@@ -132,7 +132,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="fms_black.h" />
-    <ClInclude Include="fms_distribution_normal.h" />
+    <ClInclude Include="fms_distribution.h" />
+    <ClInclude Include="fms_hypergeometric.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="test.cpp" />
