--- a/cpp/cpp.vcxproj
+++ b/cpp/cpp.vcxproj
@@ -136,7 +136,7 @@
     <ClInclude Include="fms_hypergeometric.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="test.cpp" />
+    <ClCompile Include="fms.t.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
