--- a/cpp/cpp.vcxproj.filters
+++ b/cpp/cpp.vcxproj.filters
@@ -26,7 +26,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="test.cpp">
+    <ClCompile Include="fms.t.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
