--- a/cpp/cpp.vcxproj.filters
+++ b/cpp/cpp.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="fms_hypergeometric.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="fms_root1d.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="fms.t.cpp">
