--- a/xai/xai.vcxproj.filters
+++ b/xai/xai.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClCompile Include="xll_distribution.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="xll_distribution_normal.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
