--- a/cpp/cpp.vcxproj
+++ b/cpp/cpp.vcxproj
@@ -133,6 +133,7 @@
   <ItemGroup>
     <ClInclude Include="ensure.h" />
     <ClInclude Include="fms_black.h" />
+    <ClInclude Include="fms_black_normal.h" />
     <ClInclude Include="fms_distribution.h" />
     <ClInclude Include="fms_distribution_normal.h" />
     <ClInclude Include="fms_hypergeometric.h" />
