--- a/cpp/cpp.vcxproj.filters
+++ b/cpp/cpp.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="fms_distribution_normal.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="fms_black_normal.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="fms.t.cpp">
