--- a/xai/xai.vcxproj
+++ b/xai/xai.vcxproj
@@ -152,6 +152,7 @@
   <ItemGroup>
     <ClCompile Include="xll_distribution.cpp" />
     <ClCompile Include="xll_black.cpp" />
+    <ClCompile Include="xll_distribution_normal.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\xll\xll.vcxproj">
