--- a/cpp/cpp.vcxproj
+++ b/cpp/cpp.vcxproj
@@ -134,7 +134,9 @@
     <ClInclude Include="ensure.h" />
     <ClInclude Include="fms_black.h" />
     <ClInclude Include="fms_black_normal.h" />
+    <ClInclude Include="fms_bsm.h" />
     <ClInclude Include="fms_distribution.h" />
+    <ClInclude Include="fms_distribution_double_exponential.h" />
     <ClInclude Include="fms_distribution_normal.h" />
     <ClInclude Include="fms_hypergeometric.h" />
     <ClInclude Include="fms_root1d.h" />
