--- a/xai/xai.vcxproj.filters
+++ b/xai/xai.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="xll_distribution_normal.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="xll_distribution_double_exponential.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
