ARRAY.SEQUENCE hedge.xlsx

--- a/xai/xai.vcxproj.filters
+++ b/xai/xai.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="xll_distribution_double_exponential.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="xll_array_sequence.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
