--- a/xai/xai.vcxproj
+++ b/xai/xai.vcxproj
@@ -150,6 +150,7 @@
     <ClInclude Include="xai.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="xll_array_sequence.cpp" />
     <ClCompile Include="xll_distribution.cpp" />
     <ClCompile Include="xll_black.cpp" />
     <ClCompile Include="xll_distribution_double_exponential.cpp" />
