--- a/xai/xai.vcxproj.filters
+++ b/xai/xai.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClCompile Include="xll_array_sequence.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="xll_bootstrap.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
