--- a/xai/xai.vcxproj.filters
+++ b/xai/xai.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClCompile Include="xll_bootstrap.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="xll_bachelier.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
