--- a/xai/xai.vcxproj
+++ b/xai/xai.vcxproj
@@ -151,6 +151,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="xll_array_sequence.cpp" />
+    <ClCompile Include="xll_bachelier.cpp" />
     <ClCompile Include="xll_bootstrap.cpp" />
     <ClCompile Include="xll_distribution.cpp" />
     <ClCompile Include="xll_black.cpp" />
