--- a/cpp/cpp.vcxproj.filters
+++ b/cpp/cpp.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="fms_bachelier.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="fms_holee.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="fms.t.cpp">
