--- a/xai/xai.vcxproj
+++ b/xai/xai.vcxproj
@@ -157,6 +157,7 @@
     <ClCompile Include="xll_black.cpp" />
     <ClCompile Include="xll_distribution_double_exponential.cpp" />
     <ClCompile Include="xll_distribution_normal.cpp" />
+    <ClCompile Include="xll_holee.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\xll\xll.vcxproj">
