--- a/xai/xai.vcxproj.filters
+++ b/xai/xai.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClCompile Include="xll_bachelier.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="xll_holee.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
