--- a/cpp/cpp.vcxproj
+++ b/cpp/cpp.vcxproj
@@ -137,6 +137,7 @@
     <ClInclude Include="fms_black_normal.h" />
     <ClInclude Include="fms_bootstrap.h" />
     <ClInclude Include="fms_bsm.h" />
+    <ClInclude Include="fms_carr_madan.h" />
     <ClInclude Include="fms_distribution.h" />
     <ClInclude Include="fms_distribution_double_exponential.h" />
     <ClInclude Include="fms_distribution_normal.h" />
