--- a/xai/xai.vcxproj.filters
+++ b/xai/xai.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClCompile Include="xll_holee.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="xll_carr_madan.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
