--- a/cpp/cpp.vcxproj
+++ b/cpp/cpp.vcxproj
@@ -132,6 +132,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ensure.h" />
+    <ClInclude Include="fms_american.h" />
     <ClInclude Include="fms_bachelier.h" />
     <ClInclude Include="fms_black.h" />
     <ClInclude Include="fms_black_normal.h" />
