american option pricing

--- a/cpp/cpp.vcxproj
+++ b/cpp/cpp.vcxproj
@@ -132,7 +132,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ensure.h" />
-    <ClInclude Include="fms_american.h" />
+    <ClInclude Include="fms_binomial.h" />
     <ClInclude Include="fms_bachelier.h" />
     <ClInclude Include="fms_black.h" />
     <ClInclude Include="fms_black_normal.h" />
@@ -143,7 +143,7 @@
     <ClInclude Include="fms_distribution_double_exponential.h" />
     <ClInclude Include="fms_distribution_normal.h" />
     <ClInclude Include="fms_fixed_income.h" />
-    <ClInclude Include="fms_holee.h" />
+    <ClInclude Include="fms_ho_lee.h" />
     <ClInclude Include="fms_hypergeometric.h" />
     <ClInclude Include="fms_pwflat.h" />
     <ClInclude Include="fms_root1d.h" />
